Add Gemfiles for local Github Pages testing with Jekyll
-Add Gemfile and Gemfile.lock
-Edited CONGRITUTING.md to add instructions on testing locally with Jekyll
-Edited .gitignore to ignore Jekyll generated files
-Added _config.yml to include CONTRIBUTING.md for web page generation for Github Pages

Verified that running the steps specified in CONTRIBUTING.md is able to generate a local Github Pages website.

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+## Github Pages testing with Jekyll
+_site
